# ioq3

./: .gitignore  .travis.yml  BUILD_INSTRUCTIONS_WINDOWS.md  CMakeLists.txt  CONTRIBUTING.md  COPYING.txt  ChangeLog  Dockerfile  Jenkinsfile  Jenkinsfiles  Makefile  README-serverside-demos.md  README.md  autoupdater-readme.txt  bees.txt  docker-build.sh  glsl_stringify.py  ioq3.cbp  ioq3.code-workspace  make-macosx-app.sh  make-macosx-panther-app.sh  make-macosx-panther.sh  make-macosx-ub2.sh  md4-readme.txt  package.json  server.cfg  simple-jenkins-ci-build-win64.sh  travis-ci-build.sh  voip-readme.txt  zcam-readme.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  ccpp.yml  deploy-pages.yml  docker-image.yml  docker-publish.yml  mingw32x86_64.yml
cmake/: AddQVM.cmake  SDL2.cmake  client.cmake  identity.cmake  identity.h.in  renderer_common.cmake  renderer_gl1.cmake  renderer_gl2.cmake  renderer_vulkan.cmake  server.cmake
cmake/libraries/: freetype.cmake  jpeg.cmake  opus.cmake  vorbis.cmake
cmake/utils/: arch.cmake  qvm_tools.cmake
code/: CMakeLists.txt  version.h
code/AL/: CMakeLists.txt
code/SDL2/: CMakeLists.txt  upgrade.sh
code/SDL2/include/: SDL_stdinc.h
code/asm/: ftola.asm  ftola.c  qasm.h  snapvector.asm  snapvector.c  vm_x86_64.asm
code/autoupdater/: CMakeLists.txt  autoupdater.c
code/autoupdater/rsa_tools/: rsa_common.c  rsa_common.h  rsa_sign.c  rsa_verify.c
code/botlib/: CMakeLists.txt  aasfile.h  be_aas.h  be_aas_bsp.h  be_aas_bspq3.c  be_aas_cluster.c  be_aas_debug.c  be_aas_def.h  be_aas_entity.c  be_aas_file.c  be_aas_main.c  be_aas_move.c  be_aas_optimize.c  be_aas_reach.c  be_aas_route.c  be_aas_routealt.c  be_aas_sample.c  be_aas_sample.h  be_ai_char.c  be_ai_chat.c  be_ai_chat.h  be_ai_gen.c  be_ai_goal.c  be_ai_goal.h  be_ai_move.c  be_ai_move.h  be_ai_weap.c  be_ai_weap.h  be_ai_weight.c  be_ai_weight.h  be_ea.c  be_ea.h  be_interface.c  be_interface.h  botlib.h  l_crc.c  l_crc.h  l_libvar.c  l_libvar.h  l_log.c  (+9 more)
code/cgame/: CMakeLists.txt  cg_consolecmds.c  cg_draw.c  cg_drawtools.c  cg_effects.c  cg_ents.c  cg_event.c  cg_info.c  cg_local.h  cg_localents.c  cg_main.c  cg_marks.c  cg_newdraw.c  cg_particles.c  cg_players.c  cg_playerstate.c  cg_predict.c  cg_public.h  cg_scoreboard.c  cg_servercmds.c  cg_snapshot.c  cg_syscalls.asm  cg_syscalls.c  cg_view.c  cg_weapons.c
code/client/: CMakeLists.txt  cl_avi.c  cl_cgame.c  cl_cin.c  cl_console.c  cl_curl.c  cl_curl.h  cl_http.h  cl_http_curl.c  cl_http_windows.c  cl_input.c  cl_keys.c  cl_main.c  cl_mongoose.c  cl_net_chan.c  cl_parse.c  cl_scrn.c  cl_ui.c  client.h  keycodes.h  keys.h  libmumblelink.c  libmumblelink.h  qal.c  qal.h  snd_adpcm.c  snd_altivec.c  snd_codec.c  snd_codec.h  snd_codec_ogg.c  (+10 more)
code/game/: CMakeLists.txt  ai_chat.c  ai_cmd.c  ai_cmd.h  ai_dmnet.c  ai_dmnet.h  ai_dmq3.c  ai_dmq3.h  ai_main.c  ai_main.h  ai_team.c  ai_team.h  ai_vcmd.c  ai_vcmd.h  bg_lib.c  bg_lib.h  bg_local.h  bg_misc.c  bg_pmove.c  bg_public.h  bg_slidemove.c  chars.h  g_active.c  g_arenas.c  g_bot.c  g_client.c  g_cmds.c  g_combat.c  g_items.c  g_local.h  g_main.c  g_mem.c  g_misc.c  g_missile.c  g_mover.c  g_public.h  g_rankings.c  g_rankings.h  g_session.c  g_spawn.c  (+15 more)
code/renderergl1/: CMakeLists.txt  tr_altivec.c  tr_animation.c  tr_backend.c  tr_bloom.c  tr_bsp.c  tr_cmds.c  tr_curve.c  tr_flares.c  tr_image.c  tr_init.c  tr_light.c  tr_local.h  tr_main.c  tr_marks.c  tr_mesh.c  tr_model.c  tr_model_iqm.c  tr_scene.c  tr_shade.c  tr_shade_calc.c  tr_shader.c  tr_sky.c  tr_subs.c  tr_surface.c  tr_world.c
code/server/: CMakeLists.txt  server.h  sv_bot.c  sv_ccmds.c  sv_client.c  sv_demo.c  sv_game.c  sv_http.c  sv_init.c  sv_main.c  sv_net_chan.c  sv_rankings.c  sv_snapshot.c  sv_world.c
code/ui/: CMakeLists.txt  ui_atoms.c  ui_callvote.c  ui_gameinfo.c  ui_local.h  ui_main.c  ui_players.c  ui_public.h  ui_servers2.c  ui_shared.c  ui_shared.h  ui_startserver.c  ui_syscalls.asm  ui_syscalls.c
deploy/: autoexec.cfg  botsoff.cfg  botson.cfg  ctf.cfg  dm.cfg  docker-compose.yml
docs/: vulkan-readme.md
misc/: premake5.lua  update-libs.sh
misc/CMakeLists/autoupdater/: CMakeLists.txt
misc/CMakeLists/client/: CMakeLists.txt
misc/CMakeLists/client/internal_asm/: CMakeLists.txt
misc/CMakeLists/client/internal_inline_asm/: CMakeLists.txt
misc/CMakeLists/client/internal_masm/: CMakeLists.txt
misc/CMakeLists/client/internal_ogg/: CMakeLists.txt
misc/CMakeLists/client/internal_opus/: CMakeLists.txt
misc/CMakeLists/client/internal_opusfile/: CMakeLists.txt
misc/CMakeLists/client/internal_vorbis/: CMakeLists.txt
misc/CMakeLists/internal_jpeg/: CMakeLists.txt
misc/CMakeLists/internal_zlib/: CMakeLists.txt
misc/CMakeLists/qvm/: CMakeLists.txt
misc/CMakeLists/qvm/baseq3/: CMakeLists.txt
misc/CMakeLists/qvm/baseq3/cgame/: CMakeLists.txt
misc/CMakeLists/qvm/baseq3/game/: CMakeLists.txt
misc/CMakeLists/qvm/baseq3/ui/: CMakeLists.txt
misc/CMakeLists/qvm/missionpack/: CMakeLists.txt
misc/CMakeLists/qvm/missionpack/cgame/: CMakeLists.txt
misc/CMakeLists/qvm/missionpack/game/: CMakeLists.txt
misc/CMakeLists/qvm/missionpack/ui/: CMakeLists.txt
misc/CMakeLists/renderergl1/: CMakeLists.txt
misc/CMakeLists/server/: CMakeLists.txt
misc/CMakeLists/server/internal_inline_asm/: CMakeLists.txt
misc/CMakeLists/server/internal_masm/: CMakeLists.txt
misc/CMakeLists/tools/lburg/: CMakeLists.txt
misc/CMakeLists/tools/q3asm/: CMakeLists.txt
misc/CMakeLists/tools/q3cpp/: CMakeLists.txt
misc/CMakeLists/tools/q3lcc/: CMakeLists.txt
misc/CMakeLists/tools/q3rcc/: CMakeLists.txt
misc/CMakeLists/vm/: CMakeLists.txt
misc/CMakeLists/vm/baseq3/: CMakeLists.txt
misc/CMakeLists/vm/baseq3/cgame/: CMakeLists.txt
misc/CMakeLists/vm/baseq3/game/: CMakeLists.txt
misc/CMakeLists/vm/baseq3/ui/: CMakeLists.txt
misc/CMakeLists/vm/missionpack/: CMakeLists.txt
misc/CMakeLists/vm/missionpack/cgame/: CMakeLists.txt
misc/CMakeLists/vm/missionpack/game/: CMakeLists.txt
misc/CMakeLists/vm/missionpack/ui/: CMakeLists.txt
slugrock/: bugs.txt
(+318 files in other folders)
