if (MSVC)
	set(SDL2_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/include CACHE STRING "")
	if (CMAKE_SIZEOF_VOID_P EQUAL 8)
		set(SDL2_LIBRARIES ${LIBS_DIR}/libs/win64/SDL2.lib ${LIBS_DIR}/libs/win64/SDL2main.lib CACHE STRING "")
	else()
		set(SDL2_LIBRARIES ${LIBS_DIR}/libs/win32/SDL2.lib ${LIBS_DIR}/libs/win32/SDL2main.lib CACHE STRING "")
	endif()
else()
	find_package(PkgConfig)
	if (PKG_CONFIG_FOUND)
		pkg_check_modules(SDL2 sdl2)
	endif()
	if (NOT SDL2_FOUND)
		if (APPLE)
			set(SDL2_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/include CACHE STRING "")
			set(SDL2_LIBRARIES ${LIBS_DIR}/libs/macosx/libSDL2-2.0.0.dylib ${LIBS_DIR}/libs/macosx/libSDL2main.a CACHE STRING "")
		elseif (MINGW)
			set(SDL2_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/include CACHE STRING "")
			if (CMAKE_SIZEOF_VOID_P EQUAL 8)
				set(SDL2_LIBRARIES ${LIBS_DIR}/libs/win64/libSDL2.dll.a ${LIBS_DIR}/libs/win64/libSDL2main.a CACHE STRING "")
			else()
				set(SDL2_LIBRARIES ${LIBS_DIR}/libs/win32/libSDL2.dll.a ${LIBS_DIR}/libs/win32/libSDL2main.a CACHE STRING "")
			endif()
		endif()
	endif()
endif()

add_library(libSDL2 INTERFACE)
if (SDL2_LIBRARIES)
	target_link_libraries(libSDL2 INTERFACE ${SDL2_LIBRARIES})
endif()
if (SDL2_INCLUDE_DIRS)
	target_include_directories(libSDL2 INTERFACE ${SDL2_INCLUDE_DIRS})
endif()
